[package]
name = "chopsticks"
version = "0.1.0"
edition = "2024"

[dependencies]
wayland-client = "0.31.14"
wayland-protocols-wlr = { version = "0.3.12", features = ["client"] }
smithay-client-toolkit = { version = "0.20", features = ["calloop"] }
calloop = "0.14.4"
calloop-wayland-source = "0.4.1"
memmap2 = "0.9.10"
swash = "0.2.7"
anyhow = "1.0.102"
toml = "1.1.2"
serde = { version = "1.0.228", features = ["derive"] }
dirs = "6.0"
fs4 = "1.1.0"
